<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:id="@+id/rr_sign">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textStyle="bold"
                android:textColor="@color/purple_200"
                android:textSize="32dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                />

            <LinearLayout
                android:id="@+id/ll_user"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/register_tv"
                android:layout_centerHorizontal="true"
                android:elevation="10dp"
                android:background="@drawable/round_btn_gray">

                <EditText
                    android:id="@+id/edit_user_name"
                    android:hint="@string/enter_user_name"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:drawableLeft="@drawable/account"
                    style="@style/Widget.AppCompat.EditText.Signup"
                    android:drawablePadding="10dp" />

<!--                <TextView-->
<!--                    android:id="@+id/tvt_user"-->
<!--                    style="@style/Widget.AppCompat.EditText.Signup"-->
<!--                    android:drawableLeft="@drawable/account_outline"-->
<!--                    android:drawablePadding="10dp"-->
<!--                    android:hint="@string/user_name"-->
<!--                    android:singleLine="true" />-->


            </LinearLayout>>

            <TextView
                android:id="@+id/tv_user_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="Enter User Name"
                android:textSize="@dimen/sp14"
                android:visibility="gone"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/ll_user"
                android:layout_centerHorizontal="true"
                android:textColor="@color/red"

                />

            <LinearLayout
                android:id="@+id/ll_sign_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tv_user_error"
                android:layout_centerHorizontal="true"
                android:elevation="10dp"
                android:background="@drawable/round_btn_gray">

                <EditText
                    android:id="@+id/edit_email"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:drawableLeft="@drawable/email"
                    style="@style/Widget.AppCompat.EditText.Signup"
                    android:drawablePadding="10dp"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="Enter Email ID"
                android:textSize="@dimen/sp14"
                android:visibility="gone"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/ll_sign_email"
                android:layout_centerHorizontal="true"
                android:textColor="@color/red"/>


            <TextView
                android:id="@+id/tv_email_error1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="Enter Valid Email ID"
                android:textSize="@dimen/sp14"
                android:visibility="gone"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_email_error"
                android:layout_centerHorizontal="true"
                android:textColor="@color/red"/>


            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_email_error1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_btn_gray"
                android:elevation="10dp">

                <EditText
                    android:id="@+id/edit_password"
                    style="@style/Widget.AppCompat.EditText.Signup"
                    android:layout_marginTop="0dp"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:drawableLeft="@drawable/account_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_password"
                    android:singleLine="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_pass_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="Enter Password"
                android:textSize="@dimen/sp14"
                android:visibility="gone"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/ll_password"
                android:layout_centerHorizontal="true"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/tv_pass_error1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="Enter Valid Password"
                android:textSize="@dimen/sp14"
                android:visibility="gone"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_pass_error"
                android:layout_centerHorizontal="true"
                android:textColor="@color/red"/>


            <LinearLayout
                android:id="@+id/ll_submit"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_below="@+id/ll_password"
                android:background="@drawable/round_btn_orange"
                android:elevation="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="SUBMIT"
                    android:layout_gravity="center"
                    style="@style/Widget.AppCompat.TextView.Login"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/ll_submit"
                />





        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>



</RelativeLayout>